// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

model Store {
  id      Int    @id @default(autoincrement()) // key: id
  name    String
  address String
  phone   String

  Drinks      Drink[]
  Infors      Info[]
  BestSellers BestSeller[]
  Toppings    Topping[]
}

model Drink {
  id      Int    @id @default(autoincrement())
  name    String
  type    Type
  storeId Int

  Store       Store        @relation(fields: [storeId], references: [id])
  BestSellers BestSeller[]
  Pricings    Pricing[]
}

model BestSeller {
  id        Int @id @default(autoincrement()) // key: id
  productId Int
  storeId   Int

  Drink Drink @relation(fields: [productId], references: [id])
  Store Store @relation(fields: [storeId], references: [id])
}

model Pricing {
  productId Int
  size      Size
  price     Decimal @db.Decimal(10, 2)

  Drink Drink @relation(fields: [productId], references: [id])

  @@id([productId, size])
  @@unique([productId, size])
}

model Topping {
  id      Int     @id @default(autoincrement()) // key: id
  name    String
  price   Decimal @db.Decimal(10, 2)
  storeId Int

  Store Store @relation(fields: [storeId], references: [id])
}

model Info {
  id      Int      @id @default(autoincrement()) // key: id
  data    String
  type    InfoType
  storeId Int

  Store Store @relation(fields: [storeId], references: [id])
}

enum Type {
  BROWNSUGARBUBBLE
  TRADITIONAL
  MACHIATO
  ROSE
  SPECIAL
}

enum Size {
  M
  L
}

enum InfoType {
  FACEBOOK
  INSTAGRAM
  TIKTOK
  TWITTER
  YOUTUBE
  PHONE
}
