//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Store {
  id Int [pk, increment]
  name String [not null]
  address String [not null]
  phone String [not null]
  Drinks Drink [not null]
  Infors Info [not null]
  BestSellers BestSeller [not null]
  Toppings Topping [not null]
}

Table Drink {
  id Int [pk, increment]
  name String [not null]
  type Type [not null]
  storeId Int [not null]
  Store Store [not null]
  BestSellers BestSeller [not null]
  Pricings Pricing [not null]
}

Table BestSeller {
  id Int [pk, increment]
  productId Int [not null]
  storeId Int [not null]
  Drink Drink [not null]
  Store Store [not null]
}

Table Pricing {
  productId Int [not null]
  size Size [not null]
  price Decimal [not null]
  Drink Drink [not null]

  indexes {
    (productId, size) [pk]
    (productId, size) [unique]
  }
}

Table Topping {
  id Int [pk, increment]
  name String [not null]
  price Decimal [not null]
  storeId Int [not null]
  Store Store [not null]
}

Table Info {
  id Int [pk, increment]
  data String [not null]
  type InfoType [not null]
  storeId Int [not null]
  Store Store [not null]
}

Enum Type {
  BROWNSUGARBUBBLE
  TRADITIONAL
  MACHIATO
  ROSE
  SPECIAL
}

Enum Size {
  M
  L
}

Enum InfoType {
  FACEBOOK
  INSTAGRAM
  TIKTOK
  TWITTER
  YOUTUBE
  PHONE
}

Ref: Drink.storeId > Store.id

Ref: BestSeller.productId > Drink.id

Ref: BestSeller.storeId > Store.id

Ref: Pricing.productId > Drink.id

Ref: Topping.storeId > Store.id

Ref: Info.storeId > Store.id